--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,17 @@
 
     // Use 'appPort' to create a container with published ports. If the port isn't working, be sure
     // your server accepts connections from all interfaces (0.0.0.0 or '*'), not just localhost.
-    // "appPort": [3000],
+    "appPort": [9229],
 
     // Comment out the next line to run as root instead.
-    "remoteUser": "node",
+    // "remoteUser": "node",
+
+    // Docker Support
+    "runArgs": [
+      "--privileged",
+      "-v", "/var/run/docker.sock:/var/run/docker.sock",
+      "--network", "host"
+    ],
 
     // Use 'settings' to set *default* container specific settings.json values on container create.
     // You can edit these settings after create using File > Preferences > Settings > Remote.
