--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
     "name": "Game-DB Dev Container",
-    "dockerFile": "Dockerfile",
+    "dockerFile": "../dev.Dockerfile",
 
     // Use 'appPort' to create a container with published ports. If the port isn't working, be sure
     // your server accepts connections from all interfaces (0.0.0.0 or '*'), not just localhost.
-    "appPort": [9229],
+    // "appPort": [3000],
 
     // Comment out the next line to run as root instead.
     // "remoteUser": "node",
@@ -13,7 +13,10 @@
     "runArgs": [
       "--privileged",
       "-v", "/var/run/docker.sock:/var/run/docker.sock",
-      "--network", "host"
+      "--network", "host",
+
+      // Set VSCode as editor for Git
+      "-e", "VISUAL=code --wait"
     ],
 
     // Use 'settings' to set *default* container specific settings.json values on container create.
