--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
       "name": "(App) Launch Program",
       "cwd": "${workspaceFolder}/app",
       "program": "${workspaceFolder}/app/bin/app.js",
-      "port": 9229
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
     },
     {
       "type": "node",
@@ -25,7 +26,7 @@
       "windows": {
         "program": "${workspaceFolder}/app/node_modules/jest/bin/jest",
       },
-      "port": 9229
+      "timeout": 25000
     },
     {
       "type": "node",
@@ -44,7 +45,7 @@
       "windows": {
         "program": "${workspaceFolder}/app/node_modules/jest/bin/jest",
       },
-      "port": 9229
+      "timeout": 25000
     }
   ]
 }
