--- a/app/package.json
+++ b/app/package.json
@@ -7,28 +7,35 @@
   "contributors": [
     "Brydon DeWitt"
   ],
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "private": true,
   "scripts": {
-    "start": "node ./bin/app.js",
+    "start": "node ./dist/index.js",
+    "build": "tsc",
     "test": "jest",
-    "lint": "eslint ./src/**"
+    "strip-types": "sucrase ./src -d ./js --transforms typescript",
+    "lint": "eslint --ext .js,.ts ./src/**",
+    "prepublish": "npm run build"
   },
-  "dependencies": {
-    "esm": "^3.2.25"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "babel-eslint": "^10.0.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^24.9.0",
+    "@types/node": "^13.1.8",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
     "babel-jest": "^24.9.0",
-    "eslint-config-standard": "^14.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jest": "^23.3.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "sucrase": "^3.12.1",
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.7.5"
   }
 }
