--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,8 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "inquirer": "^7.0.3"
+    "inquirer": "^7.0.3",
+    "mongoose": "^5.8.11"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -29,6 +30,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.9.0",
+    "@types/mongoose": "^5.5.43",
     "@types/node": "^13.1.8",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "babel-jest": "^24.9.0",
