--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "inquirer": "^7.0.3",
+    "inquirer-datepicker-prompt": "^0.4.2",
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
